# dashfold

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  setup.cfg
assets/: base.css
dash_fold/: app.py  layout_helper.py  model.py  model1.py  utils_.py
docker/: Dockerfile
