[tool.poetry]
name = "dash-fold"
version = "0.1.0"
description = ""
authors = ["Nikita Churikov <nikita@chur.ru>"]
readme = "README.md"
packages = [{include = "dash_fold"}]

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.81"
dash = {extras = ["celery", "diskcache"], version = "^2.9.1"}
dash-bootstrap-components = "^1.4.0"
dash-bio = {url = "https://github.com/plotly/dash-bio/archive/refs/tags/v1.0.2.tar.gz"}
dash-bio-utils = "^1.0.0"
dash-daq = "^0.5.0"
gunicorn = "^20.1.0"
jsonschema = "^4.17.3"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
plotly = "^5.13.1"
pubchempy = "^1.0.4"
requests = "^2.28.2"
scikit-learn = "^1.2.2"
celery = "^5.2.7"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
